--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ dead-letter.topic=dead-letter
 banking.transaction.topic=banking-transactions
 banking.account.topic=banking-accounts
 banking.account-holder.topic=banking-account-holder
+banking.statement=banking-statement
